--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "envalid": "^7.3.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "http-status": "^1.5.2"
   }
 }
