--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "envalid": "^7.3.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "http-status": "^1.5.2"
   }
 }
