--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.2",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.20.0",
-    "prettier": "^2.7.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
+    "eslint": "^8.35.0",
+    "prettier": "^2.8.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "http-status": "^1.5.2"
+    "http-status": "^1.5.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   }
 }
