--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "typescript-express-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server.ts",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev --files --respawn --inspect -r tsconfig-paths/register ./src/server.ts",
+    "build": "tsc && tsc-alias"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.2",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
     "eslint": "^8.35.0",
     "prettier": "^2.8.4",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -24,6 +28,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "http-status": "^1.5.2",
+    "mongoose": "^7.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   }
