--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.6.2",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
+    "@types/winston": "^2.4.4",
     "eslint": "^8.35.0",
     "prettier": "^2.8.4",
     "ts-node-dev": "^2.0.0",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "winston": "^3.8.2"
   }
 }
