--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./src/server.ts",
   "scripts": {
     "dev": "ts-node-dev --files --respawn --inspect -r tsconfig-paths/register ./src/server.ts",
-    "build": "tsc && tsc-alias"
+    "build": "tsc && tsc-alias",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src --ext .ts --fix"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +21,11 @@
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/winston": "^2.4.4",
-    "eslint": "^8.35.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.4",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.2",
